--- a/hi.html
+++ b/hi.html
@@ -6,6 +6,7 @@
     <title>hello</title>
 </head>
 <body>
+    <h1 style="color: red;">welcome to my website!</h1>
     Hello world!
 </body>
 </html>
