--- a/hi.html
+++ b/hi.html
@@ -6,7 +6,7 @@
     <title>hello</title>
 </head>
 <body>
-    <h1 style="color: red;">welcome to my website!</h1>
+    <h1 style="color: red;">welcome to my website!!</h1>
     <h2>hello</h2>
     Hello world!
 </body>
